@@ -358,8 +358,12 @@ name, date, heure, gamestate, position, name perso, name server, versions
     be the essential changes for next version but this client need
     improvment until new client is buildable.
     see http://rainbrurpg.sourceforge.net/wiki/bin/view/Concept/NewProjectLayout
-**** Code refactoring to follow coding standards
-**** TODO Cross compilation to win32                                  [66%]
+**** DONE Code refactoring to follow coding standards
+     CLOCK: [2012-01-20 ven. 14:51]--[2012-01-20 ven. 15:20] =>  0:29
+- [ ] CamelCase all filenames and header are called .hpp
+      - [ ] in interdep/
+**** TODO Cross compilation to win32                                  [72%]
+     CLOCK: [2012-01-20 ven. 13:58]--[2012-01-20 ven. 14:02] =>  0:04
      :CLOCK:
      CLOCK: [2011-01-05 mer 17:36]--[2011-01-05 mer 17:43] =>  0:07
      CLOCK: [2011-01-03 lun 17:32]--[2011-01-03 lun 17:53] =>  0:21
@@ -410,10 +414,10 @@ name, date, heure, gamestate, position, name perso, name server, versions
      - [X] maincore/inutmanager.cpp:119
 - [X] GlobalURI + loadRessources for Win32.
       Ogre cannot find media/packs/OgreCore.zip
-- [ ] Should read its config file (plugins.cfg) in execution directory
+- [X] Should read its config file (plugins.cfg) in execution directory
       and use RenderSystem_Direct3D9.dll
-      - [ ] create a plugins-win32.cfg
-      - [ ] change use in client/main.cpp with conditionnal compilation
+      - [X] create a plugins-win32.cfg
+      - [X] change use in client/main.cpp with conditionnal compilation
 - [ ] Ogre seems to create a segfault when opening zip ressources
       media/packs/OgreCore.zip
       if unzipped, it works
