@@ -115,6 +115,9 @@ A system that serialize widgets position and configuration
    FT is the ROADMAP file time (C-c C-x C-d)
 
 * v0.0.5-214 (02 dec 2011 - ???) SLOC ??? UT ??? FT ??:??
+- (15) Some filenames CamelCased and .hpp(ed)
+   GameEngine
+- (14) Handles plugins.cfg for win32
 - (13) old files from data/gui/ moved to OLD/client_date
    imagesets, layouts, looknfeel, schemes, XMLRefSchema
 - (12) Avoid circular dependencies between ogreGui and maincore
