@@ -1,0 +1,6 @@
+# Defines plugins to load
+
+# For GNU/Linux
+PluginFolder=.
+Plugin=RenderSystem_GL.dll
+Plugin=Plugin_PagingLandScape2.dll
